# ngzhankang.github.io

./: .gitignore  LICENSE  README.md  about.md  about.rst  index.html  index.js  myblog.cabal  resume.md  site.hs  stack.yaml
.github/workflows/: ci.yml
css/: _about.scss  _base.scss  _frontpage.scss  _nav.scss  _resume.scss  _variables.scss  default.css  default.scss
docs/: about.html  archive.html  contact.html  default.css  index.html  index.md
docs/about/: index.html
docs/css/: default.css
docs/posts/: 2015-08-23-example.html  2023-07-11-first-blog-post.html
docs/resume/: index.html
docs/stylesheet/: default.css
posts/: 2023-07-11-first-blog-post.markdown
templates/: about.html  archive.html  default.html  post.html
