name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/myblog#readme
license:             BSD3
license-file:        LICENSE
author:              Ng Zhan Kang
maintainer:          ngzhankang@outlook.com
copyright:           2022 Ng Zhan Kang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll >= 4.15.1.1 && < 5,
                       hjsmin == 0.2.*,
                       bytestring >= 0.10.12,
                       filepath
